--- a/pvc.yaml
+++ b/pvc.yaml
@@ -8,7 +8,7 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: standard  # Adjust according to your cloud provider
+  storageClassName: gp2
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
@@ -20,4 +20,4 @@ spec:
   resources:
     requests:
       storage: 5Gi
-  storageClassName: standard  # Adjust according to your cloud provider
+  storageClassName: gp2
