--- a/secrets.yaml
+++ b/secrets.yaml
@@ -7,11 +7,11 @@ stringData:
   USER_ID: myexpense
   USER_PASSWORD: Password1234
   JWT_SECRET_KEY: my-super-secret-key
-  MYSQL_HOST: expense-mysql-server
+  MYSQL_HOST: mysql-service
   MYSQL_USER: mysqluser
   MYSQL_PASSWORD: Password1
   MYSQL_DATABASE: expense_db
-  MONGO_URI: mongodb://expense-mongo-server:27017/analytics_db
+  MONGO_URI: mongodb://mongodb-service:27017/analytics_db
 
 
 # # authentication
